# nuisance3

./: .gitignore  .gitmodules  Analysis.ipynb  CMakeLists.txt  CONTRIBUTING.md  README.md  README_ForDevelopers.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  alma9.packages  paths.sh
.github/workflows/: CDImage.yml  CIBuild.yml  cmake-single-platform.yml
.ipynb_checkpoints/: Analysis-checkpoint.ipynb  Untitled1-checkpoint.ipynb  Untitled2-checkpoint.ipynb
Doc/DockerFiles/Alma9/: Dockerfile  Dockerfile.txt
app/: CMakeLists.txt  nuis-dump-events.cxx  nuis-enu-histograms.cxx  nuis-frame-test.cxx  nuis-histframe-test.cxx  nuis-interpreter.cxx  nuis-record-test.cxx  nuis-tohepmc3.cxx
cmake/Templates/: __init__.py.in  setup.NUISANCE3.sh.in  setup.NUISANCEV3.sh.in  setup.nuis-eventinput.sh.in
data/nuis/: nuis2hepdata.yaml
data/test_event_samples/: nuwro-sample-ANL.root
examples/: anltuning.py  eventinput_example.py  hepdata_test.py  test_reader.py
examples/c++/: CMakeLists.txt  nuis-example-arrow.cxx  nuis-example-binning.cxx  nuis-example-dumpevents.cxx  nuis-example-frame.cxx  nuis-hepdata-rec.cxx  nuis-notebook.h  nuis-spline-test.cxx  nuis-to-NuHepMC.cxx  nuis-try-eventinput.cxx  test.C  test3.C
examples/c++/.ipynb_checkpoints/: neut-weightcalc-fazep-checkpoint.cxx
examples/deprecated/: anltuning.py  test_reader.py  tuning.py
examples/jupyter/: Ex000_SimpleLoad.ipynb  Ex001_ReadEvents.ipynb  Ex002_EventFrame.ipynb
examples/jupyter/.ipynb_checkpoints/: Ex000_SimpleLoad-checkpoint.ipynb  Ex001_ReadEvents-checkpoint.ipynb  Ex002_EventFrame-checkpoint.ipynb
examples/python/: GuruTesting.ipynb  WeightedComps.ipynb  eventinput_example.py  frame_test.py  generator_comparison.py  histogram.py  measurement_custom_histogram.py  measurement_load_hepdata_example.py  measurement_load_hepdata_example_nuiscomp.py  neut.card  neut_new.card  test.cxx  test.py  test_kaskada.py  test_multithread.py  test_proselecta.py  test_record.py  test_tuning.py  test_weighting.py  testload.py  testw.py
notebooks/: DataFrames.ipynb  FrameBenchmarks.ipynb  FramePlotting.ipynb  HepMC3_binding_interop.ipynb  IOPPaperPlots.ipynb  IOPPlots.ipynb  NUISANCEHEPDataDemo.ipynb  T2KReWeight.ipynb  advanced_looping.ipynb  basic_loops.ipynb  binning.ipynb  flux_info.ipynb  flux_plots.ipynb  hfyaml.ipynb  histframes.ipynb  histframes_plotting.ipynb  logging.ipynb  microboonegki.ipynb  minervalike3d.ipynb  nuis3_demo.ipynb  nuisance2.ipynb  nuisance2_flattree.ipynb  opening_event_files.ipynb  osc.ipynb  plotly.ipynb  response.ipynb  t2konoffaxis.ipynb  test.py
scripts/cli/: CMakeLists.txt  nuis  nuis-flux  nuis-gen  nuis-hepdata  nuis-internal
scripts/cli/internal/: nuis-flux-yaml2root.py
src/nuis/: CMakeLists.txt  env.h  except.h  log.h  log.txx
src/nuis/analysis/: CMakeLists.txt  pyAnalysis.cxx
src/nuis/binning/: Binning.cxx  Binning.h  BinningFactories.cxx  README.md  (+7 more)
src/nuis/eventinput/: CMakeLists.txt  CombinedNormalizedEventSource.cxx  CombinedNormalizedEventSource.h  EventSourceFactory.cxx  EventSourceFactory.h  FilteredEventSource.h  HepMC3EventSource.cxx  HepMC3EventSource.h  IEventSource.cxx  IEventSource.h  IEventSourceCache.h  IEventSourceIterator.cxx  IEventSourceIterator.h  IEventSourceWrapper.cxx  IEventSourceWrapper.h  INormalizedEventSource.cxx  INormalizedEventSource.h  NormalizedEventSource.cxx  NormalizedEventSource.h  pyEVENTINPUT.cxx
src/nuis/eventinput/plugins/: CMakeLists.txt  GHEP3EventSource.cxx  GHEP3EventSource.h  GHEPEventSource.cxx  NUISANCE2FlatTreeEventSource.cxx  NUISANCE2FlatTreeEventSource.h  NuWroevent1EventSource.cxx  NuWroevent1EventSource.h  README.md  ROOTUtils.h  neutvectEventSource.cxx  neutvectEventSource.h  plugins.h
src/nuis/measurement/: Bin.cxx  Bin.h  CMakeLists.txt  Document.h  EXFORLoader.cxx  EXFORLoader.h  HEPDataLoader.cxx  HEPDataLoader.h  HEPDataRecord.cxx  HEPDataRecord.h  IRecord.h  MeasurementLoader.h  Projection.cxx  Projection.h  ProjectionHelper.cxx  ProjectionHelper.h  README.md  Record.cxx  Record.h  SimpleStatistics.cxx  SimpleStatistics.h  Statistics.cxx  Statistics.h  Variables.h  pyHEPDATA.cxx  pyMEASUREMENT.cxx
src/nuis/python/: CMakeLists.txt  README.md  pyBinning.cxx  pyConvert.cxx  pyEventFrame.cxx  pyEventFrame.h  pyEventInput.cxx  pyEventInput.h  pyExternal.h  pyFrame.cxx  pyFrame.h  pyHistFrame.cxx  pyHistFrame.h  pyHistFrameFillers.cxx  pyMeasurement.h  pyNUISANCE.cxx  pyNUISANCE.h  pyNUISANCELog.cxx  pyRecord.cxx  pyRecord.h  pyResponse.cxx  pyWeightCalc.cxx  pyWeightCalc.h  pyYAML.cxx  pyYAML.h
src/nuis/python/modules/: CMakeLists.txt  __init__.py  hepdata_helpers.py  matplotlib_helpers.py  plotly_helpers.py  pyNUISANCEGENIE.cxx  pyNUISANCEProb3plusplus.cxx  pyNUISANCEnusystematics.cxx  root_helpers.py
src/nuis/record/: CMakeLists.txt  ClearFunctions.h  Comparison.h  ComparisonFrame.h  ComparisonFrameinherited.h  FinaliseFunctions.h  FinalizeFunctions.h  HEPDataRecordFactory.h  IAnalysis.cxx  IAnalysis.h  IRecord.h  LikelihoodComparisons.h  LikelihoodFunctions.h  README.md  RecordFactory.cxx  RecordFactory.h  SimpleAnalysis.h  SingleAnalysis.h  SingleDistributionAnalysis.h  SingleFluxAnalysis.h  Table.h  Utility.cxx  Utility.h  Variables.h  WeightFunctions.h  exceptions.h  hook_types.h
src/nuis/record/plugins/: CMakeLists.txt  HEPDATARecord.cxx  HEPDataRecord.cxx  HEPDataRecord.h  HEPDataRecordPlugin.cxx  HEPDataRecordPlugin.h  HEPDataVariables.h  IRecordPlugin.h  NUISANCE2Record.cxx  NUISANCE2Record.h  NUISANCERecord.cxx  plugins.h
src/nuis/weightcalc/plugins/: CMakeLists.txt  GENIEReWeightCalc.cxx  GENIEReWeightCalc.h  IWeightCalcPlugin.h  NReWeightCalc.cxx  NReWeightCalc.h  Prob3plusplusWeightCalc.cxx  Prob3plusplusWeightCalc.h  T2KReWeightCalc.cxx  T2KReWeightCalc.h  nusystematicsWeightCalc.cxx  nusystematicsWeightCalc.h  plugins.h
tests/: Binning_benchmarking.cxx  Binning_tests.cxx  CMakeLists.txt  EventFrame_tests.cxx  Frame_tests.cxx  Projection_tests.cxx  Response_tests.cxx  histframe_tests.cxx
tests/python/: test_debugging.py  test_eventinput.py  test_measurement.py
(+61 files in other folders)
